# Qt6_TeslaUI

./: CMakeLists.txt  Main.qml  README-en.md  README.md  main.cpp
Controllers/: audiocontroller.cpp  audiocontroller.h  hvachandler.cpp  hvachandler.h  system.cpp  system.h
ui/BottomBar/: HVACComponent.qml  VolumeControlComponent.qml
ui/CalendarScreen/: CalendarScreen.qml
ui/CallScreen/: CallScreen.qml
ui/LeftScreen/: LeftScreen.qml
ui/MusicScreen/: MusicScreen.qml
ui/RecordScreen/: RecordScreen.qml
ui/RightScreen/: NavigationSearchBox.qml
